fix one case when return a 404 when there is not favorites posts, Res… (#20)
